Update index 2.1 .html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a href="mailto:your-email@example.com" class="text-blue-500 hover:underline">fjaffri@okstate.edu</a>
             </p>
             <p class="text-lg text-gray-700 mb-4">
-                I promise to laugh at your jokes and respond to your messages (unless they're from my robot overlords).
+                I promise to laugh at your jokes and respond to your messages (unless they're from my robot overlords). 😉
             </p>
         </div>
     </section>
