--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 About Me
             </h2>
            
-            <p class="text-lg text-gray-700 mb-4">I am Faisal Jaffri, with 3 years of experience in the field of data and software. My expertise spans across roles including Data Analyst, Data Engineer, Data Scientist, and Software Developer. My skills include Python, R, SQL, Java, and Swift. I am proficient in data visualization and statistical analysis.</p>
+            <p class="text-lg text-gray-700 mb-4">I am Faisal Jaffri, with 3+ years of experience in the field of data and software. My expertise spans across roles including Data Analyst, Data Engineer, Data Scientist, and Software Developer. My skills include Python, R, SQL, Java, and Swift. I am proficient in data visualization and statistical analysis.</p>
             
             <p class="text-lg text-gray-700 mb-4">I hold a Master's in Management Information System from Oklahoma State University with a GPA of 4.0/4.0.</p>
 
